--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="https://manifest.json">
 <title>My Brain-Trainer</title>
 <meta name="description" content="App By Digi Games ">
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
