--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <link rel="manifest" href="https://manifest.json">
+  <link rel="manifest" href="manifest.json">
 <title>My Brain-Trainer</title>
 <meta name="description" content="App By Digi Games ">
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
@@ -23,7 +23,7 @@ body {text-align:center;margin:0}
 <body>
 <div id="container">
 <div id="iFrame1" style="position:absolute; left:0px; top:0px; z-index:0">
-<iframe name="iFrame1" width="1920" height="919" src="https://cdn.gamesnacks.com/braintrainer1/gameCode/index.html" scrolling="no" frameborder="0"></iframe>
+<iframe name="iFrame1" width="1920" height="919" src="http://cdn.gamesnacks.com/braintrainer1/gameCode/index.html" scrolling="no" frameborder="0"></iframe>
 </div>
 
 </div>
