--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body {text-align:center;margin:0}
 <body>
 <div id="container">
 <div id="iFrame1" style="position:absolute; left:0px; top:0px; z-index:0">
-<iframe name="iFrame1" width="1920" height="919" src="http://cdn.gamesnacks.com/braintrainer1/gameCode/index.html" scrolling="no" frameborder="0"></iframe>
+<iframe name="iFrame1" width="1920" height="919" src="cdn.gamesnacks.com/braintrainer1/gameCode/index.html" scrolling="no" frameborder="0"></iframe>
 </div>
 
 </div>
